--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   provider: ^6.1.5+1
   go_router: ^16.2.4
+  flutter_secure_storage: ^9.2.4
+  http: ^1.5.0
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
